--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <link rel="manifest" href="manifest.json">
+<link rel="manifest" href="manifest.json">  <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
   <app-root></app-root>
