--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>AngularPwa</title>
-  <base href="dist/angular-pwa">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
@@ -11,6 +11,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.json">
 <link rel="manifest" href="manifest.json">  <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
