--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,11 @@
   <meta name="theme-color" content="#1976d2">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="manifest" href="manifest.json">
-<link rel="manifest" href="manifest.json" />  <meta name="theme-color" content="#1976d2">
+<link rel="manifest" href="manifest.json"/>  <meta name="theme-color" content="#1976d2">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root></app-root>
