--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en" data-critters-container>
-<head>
+<head><base href="/angular-pwa/">
   <meta charset="utf-8">
   <title>AngularPwa</title>
-  <base href="/">
+  <link rel="canonical" href="https://casare86.github.io/angular-pwa/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
@@ -16,10 +16,17 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#1976d2">y
+  
+
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 <script src="runtime.080825e25f44479b.js" type="module"></script><script src="polyfills.37a20d4854dfc4aa.js" type="module"></script><script src="main.2f42d247901a3aae.js" type="module"></script></body>
+<script>
+  if (navigator.serviceWorker) {
+    navigator.serviceWorker.register('//sw.js', {scope: '/{repository}/'})
+  }
+  </script>
 </html>
